# docker-dash

./: .env-dist  .gitignore  Dockerfile  README.md  compose.server.yml  compose.yml  docker-run.sh  pyproject.toml
docker_dash/: app.py  settings.py
