[tool.poetry]
name = "docker-dash"
version = "0.0.1"
description = "Dockerize a plotly/dash app."
authors = ["Diogo Caribé <dogosousa@gmail.com.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-leaflet = "^1.0.15"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]